--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,4 @@ services:
     command: pipenv run bot
     restart: always
     environment:
-      - LEMONSAURUS_DISCORD_TOKEN=<supersecrettokenyouguise>
+      - LEMONSAURUS_DISCORD_TOKEN=${LEMONSAURUS_DISCORD_TOKEN}
