Exclude by default in .dockerignore
Doing an exclude by default, with exceptions protects future devs from adding new files and inadvertently adding them to built images.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-__pycache__
-.venv
-docker-compose.yaml
-LICENSE
-README.md
-docker
+# Exclude everything
+*
+
+# Make exceptions for what's needed
+!tyrant
+!Pipfile*
+!LICENSE
