--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-discord-py = {url = "https://github.com/Rapptz/discord.py/archive/master.zip"}
+discord-py = {file = "https://github.com/Rapptz/discord.py/archive/master.zip"}
 
 [requires]
 python_version = "3.9"
