Subclass command.Bot to send a connection log on_ready

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,4 @@ services:
     restart: always
     environment:
       - LEMONSAURUS_DISCORD_TOKEN=${LEMONSAURUS_DISCORD_TOKEN}
+      - LEMONSAURUS_LOG_WEBHOOK=${LEMONSAURUS_LOG_WEBHOOK}
