--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 
 [packages]
 discord-py = {file = "https://github.com/Rapptz/discord.py/archive/master.zip"}
+aiodns = "~=3.0"
 
 [requires]
 python_version = "3.9"
