Use .env file in production docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,5 @@ services:
     container_name: tyrant
     command: pipenv run bot
     restart: always
-    environment:
-      - LEMONSAURUS_DISCORD_TOKEN=${LEMONSAURUS_DISCORD_TOKEN}
-      - LEMONSAURUS_LOG_WEBHOOK=${LEMONSAURUS_LOG_WEBHOOK}
+    env_file:
+      - .env
