--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ verify_ssl = true
 [packages]
 discord-py = {file = "https://github.com/Rapptz/discord.py/archive/master.zip"}
 aiodns = "~=3.0"
+loguru = "~=0.5"
 
 [requires]
 python_version = "3.9"
