Fix loguru sinks
This removes the retention and rotation kwargs from the sys.stdout sink, as they are not supported, and addes a file sink.

This commit also adds docker-compose volumes, so that the log files are available on the host machine.

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -10,5 +10,6 @@ services:
     tty: true
     volumes:
       - ./tyrant:/tyrant/tyrant:ro
+      - ./logs:/tyrant/logs
     env_file:
       - .env
