--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,7 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-discord-py = {file = "https://github.com/Rapptz/discord.py/archive/master.zip"}
+disnake = "~=2.4"
 aiodns = "~=3.0"
 loguru = "~=0.5"
 
