Add `fonts` and `images` volumes to main compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,5 @@ services:
       - .env
     volumes:
       - ./logs:/tyrant/logs
+      - ./images:/tyrant/images:ro
+      - ./fonts:/tyrant/fonts:ro
